Bug 1801819: Make SynchronousTask double-check its completion flag to identify timeouts. r=sotaro, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D162877